--- a/trees/templates/add_planted_tree.html
+++ b/trees/templates/add_planted_tree.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Add Planted Tree</title>
+    <title>Adicionar árvore plantada</title>
 </head>
 <body>
-    <h2>Add Planted Tree</h2>
+    <h2>Adicionar árvore plantada</h2>
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
