--- a/trees/templates/tree/base.html
+++ b/trees/templates/tree/base.html
@@ -13,8 +13,8 @@
   {% endblock %}
 </div>
 <div id="sidebar">
-  <h2>Minhas Arvores</h2>
-  <p>Esta são minhas arvores.</p>
+  <h2>Arvores Plantadas</h2>
+  <p>Esta as arvores plantadas.</p>
 </div>
 </body>
 </html>
