--- a/trees/templates/tree/post/detail.html
+++ b/trees/templates/tree/post/detail.html
@@ -1,6 +1,6 @@
 {% extends 'tree/base.html' %}
 
-{% block title %}{{ post.title }}{% endblock title %}
+{% block title %}{{ post.title }} - {{ post.account }}{% endblock title %}
 
 {% block content %}
 <h1>{{ post.title }}</h1>
