--- a/trees/templates/tree/post/detail.html
+++ b/trees/templates/tree/post/detail.html
@@ -1,4 +1,4 @@
-{% extends 'tree/base.html' %}
+{% extends 'base.html' %}
 
 {% block title %}{{ post.title }} - {{ post.account }}{% endblock title %}
 
