--- a/trees/templates/base.html
+++ b/trees/templates/base.html
@@ -14,7 +14,7 @@
 </div>
 <div id="sidebar">
   <h2>Arvores Plantadas</h2>
-  {{ request.user.first_name }}
+  <p>Usuario logado: {{ request.user.first_name }}</p>
 </div>
 </body>
 </html>
